# ESP32C6-pedometer

./: mruby_coprocessor_evaluation_guide.md  pedometer_algorithm.c  pedometer_algorithm.h
cl/gps_acc/: sdkconfig
cl/pedometer/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
cl/pedometer/main/: CMakeLists.txt  main.c
cl/pedometer/main/ulp/: main.c
cm/gps_acc/: sdkconfig
cm/pedometer/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
cm/pedometer/main/: CMakeLists.txt  main.c
cm/pedometer/main/ulp/: main.c
power_consumption/pedometer/: README.md
rl/: sdkconfig  sdkconfig.defaults
rl/components/mruby/hal/esp32/copro/: compile.c  copro.c  dbg.h  gc.copro.c  gc.copro.h
rl/main/: CMakeLists.txt  gps_acc.c  gps_acc.rb  main.c  pedometer.c  pedometer.rb  pedometer_new.c  ulp_copro_symbols.ld
rl/main/mrubycopro-runtime/: gc.h  main.c
rm/: README.md
rm/components/mruby/hal/esp32/copro/: copro.c
rm/main/: gps_acc.c  main.c  pedometer.c  pedometer.rb
tools/: plot_pedometer.py
